Completed introductory writeup.

--- a/bib.bib
+++ b/bib.bib
@@ -8,3 +8,17 @@
     pages = {1686},
     doi = {10.21105/joss.01686},
   }
+
+@Manual{str,
+    title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+    author = {Hadley Wickham},
+    year = {2023},
+    note = {R package version 1.5.1},
+  }
+  
+@Manual{jsl,
+    title = {The jsonlite package: A practical and consistent mapping between json data and r objects},
+    author = {Ooms, J.},
+    year = {2014},
+    note = {arXiv:1403.2805 [stat.CO]},
+  }
